force-app/main/default/objects/Voucher__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>