force-app/main/default/objects/Voucher__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce.com Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce.com Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Service Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Community Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud Email Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud Social Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud Developer</fullName>
            </value>
            <value>
                <fullName>Force.com Platform Application Builder</fullName>
            </value>
            <value>
                <fullName>Force.com Platform Developer I</fullName>
            </value>
            <value>
                <fullName>Force.com Platform Developer II</fullName>
            </value>
            <value>
                <fullName>Salesforce Pardot Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Pardot Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Field Services Lightning</fullName>
            </value>
            <value>
                <fullName>Salesforce Financials Services Lightning</fullName>
            </value>
            <value>
                <fullName>Salesforce Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce B2B Commerce Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce B2B Commerce Developer</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics and Discovery Consultant</fullName>
            </value>
            <value>
                <fullName>Datorama</fullName>
            </value>
            <value>
                <fullName>Generic exam vouchers</fullName>
            </value>
            <value>
                <fullName>Salesforce.com Administrator Maintenance</fullName>
            </value>
            <value>
                <fullName>RETAKE Generic exam vouchers</fullName>
            </value>
            <value>
                <fullName>RETAKE Salesforce Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>RETAKE Salesforce Service Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>RETAKE Force.com Platform Developer I</fullName>
            </value>
            <value>
                <fullName>RETAKE Force.com Platform Developer II</fullName>
            </value>
            <value>
                <fullName>-- Not valid voucher --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>