force-app/main/default/objects/Voucher__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>