force-app/main/default/objects/Voucher__c/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Voucher</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>