force-app/main/default/objects/Voucher__c/listViews/BasicQueueAmazon_Voucher.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_Voucher</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>