force-app/main/default/objects/Voucher__c/listViews/Not_Assigned_Vouchers.listView-meta.xml
<ListView>
    <fullName>Not_Assigned_Vouchers</fullName>
    <columns>NAME</columns>
    <columns>Voucher__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Certification__c</columns>
    <columns>Order_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Order_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2018</value>
    </filters>
    <label>Not Assigned Vouchers</label>
</ListView>