force-app/main/default/objects/Voucher__c/listViews/todos.listView-meta.xml
<ListView>
    <fullName>todos</fullName>
    <columns>NAME</columns>
    <columns>Voucher__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Company__c</columns>
    <columns>Certification__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Order_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>