force-app/main/default/objects/Voucher__c/listViews/Vouchers_por_cuenta.listView-meta.xml
<ListView>
    <fullName>Vouchers_por_cuenta</fullName>
    <columns>NAME</columns>
    <columns>Voucher__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Company__c</columns>
    <columns>Certification__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Vouchers por cuenta</label>
</ListView>